<resources>
    <string name="app_name">Hoccer XO</string>
    <string name="demo_message">Lorem ipsum dolor...</string>
    <string name="common_ok">Ok</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_done">Done</string>
    <string name="common_decline">Decline</string>
    <string name="common_accept">Accept</string>
    <string name="common_delete">Delete</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_pair">Pair with someone</string>
    <string name="menu_group_profile_add_person">Add person</string>
    <string name="menu_new_group">Create group</string>
    <string name="menu_scan_code">Scan code</string>
    <string name="menu_show_code">Show code</string>
    <string name="menu_add_attachment">Add attachment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_music_viewer">Music</string>
    <string name="menu_about">About</string>
    <string name="menu_reconnect">Reconnect</string>
    <string name="menu_quit">Quit</string>
    <string name="contacts_category_friends">Friends</string>
    <string name="contacts_category_groups">Groups</string>
    <string name="contacts_empty_info">You have no contacts.</string>
    <string name="contacts_empty_pairing">Add a contact</string>
    <string name="dialog_token_invitation_title">Invitation</string>
    <string name="contacts_sms_invitation_description">has sent you an invitation via SMS.
        Do you wish to accept?
    </string>
    <string name="attachment_confirm_delete_dialog_message">Delete selected attachments and related chat messages?
    </string>
    <string name="audio_attachment_list_all">All</string>
    <string name="audio_attachment_list_unknown">Unknown</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search Attachments</string>
    <string name="dialog_enable_location_service_title">Location Services</string>
    <string name="dialog_enable_location_service_message">This feature uses location service
        (GPS or Network location). Do you want to enable it?</string>
    <string name="nearby_yes">Yes</string>
    <string name="nearby_no">No</string>
    <string name="contact_name_new_client">New Friend</string>
    <string name="contact_name_new_group">New Group</string>
    <string name="contact_status">Hello there!</string>
    <string name="contact_role_owner">Owner</string>
    <string name="composition_text_hint">Type message</string>
    <string name="dialog_empty_group_title">Can Not Send Message</string>
    <string name="dialog_empty_group_message">You can not send a message to this group because there are no members except you. Please invite friends to this group.</string>
    <string name="messaging_loading">Loading...</string>
    <string name="messaging_no_messages">No Messages</string>
    <string name="messaging_invited_join">Join group</string>
    <string name="menu_copy_attachment">Copy</string>
    <string name="pairing_token_info">Give this token to someone:</string>
    <string name="pairing_code_info">Enter a code given to you here:</string>
    <string name="pairing_code_hint">Enter code</string>
    <string name="pairing_token_pair">Pair using token</string>
    <string name="pairing_qr_info">You can also pair using QR codes:</string>
    <string name="pairing_qr_show">Show QR code</string>
    <string name="pairing_qr_scan">Scan QR code</string>
    <string name="pairing_token_generating">Generating...</string>
    <string name="pairing_token_send_sms">Send via SMS</string>
    <string name="pairing_success">Pairing succeeded</string>
    <string name="dialog_pairing_failed_title">Pairing failed</string>
    <string name="dialog_pairing_failed_message">The code you have entered is invalid.</string>
    <string name="profile_avatar_set_button">Change my image</string>
    <string name="profile_name_title">Name</string>
    <string name="profile_name_hint">Your name</string>
    <string name="profile_status_text">status</string>
    <string name="profile_name_edit">Change name</string>
    <string name="profile_name_set_button">Set new username</string>
    <string name="profile_status_edit">Hello there!</string>
    <string name="profile_status_set_button">Set new status</string>
    <string name="profile_self_register_button">Register</string>
    <string name="profile_user_block_status">This user is blocked. Unblock to receive messages.
    </string>
    <string name="profile_user_block_button">Block this user</string>
    <string name="profile_user_unblock_button">Unblock this user</string>
    <string name="profile_user_depair_button">Depair this user</string>
    <string name="profile_user_delete_button">Delete this user</string>
    <string name="group_name_hint">Group name</string>
    <string name="profile_group_members_title">Members</string>
    <string name="profile_group_create_button">Create group</string>
    <string name="profile_group_join_button">Join group</string>
    <string name="profile_group_invite_button">Invite users to this Group</string>
    <string name="profile_group_leave_button">Leave this Group</string>
    <string name="profile_group_kick_button">Kick user from this Group</string>
    <string name="profile_group_disband_button">Disband this Group</string>
    <string name="profile_group_delete_button">Delete this Group</string>
    <string name="message_text">Your message text</string>
    <string name="content_downloading">Downloading...</string>
    <string name="content_uploading">Uploading...</string>
    <string name="content_images">Photo</string>
    <string name="content_video">Video</string>
    <string name="content_capture">Take Photo</string>
    <string name="content_music">Music</string>
    <string name="content_ringtone">Ringtone</string>
    <string name="content_contact">Contact</string>
    <string name="content_location">Location</string>
    <string name="content_data">Data</string>
    <string name="content_clipboard">Clipboard</string>
    <string name="content_not_supported_audio_title">Unsupported Format</string>
    <string name="content_not_supported_audio_msg">This audio attachment cannot be played back.</string>
    <string name="client_state_idle">Idle</string>
    <string name="client_state_inactive">Inactive</string>
    <string name="client_state_active">Ready</string>
    <string name="client_state_syncing">Synchronizing</string>
    <string name="client_state_reconnecting">Reconnecting</string>
    <string name="client_state_registering">Registering</string>
    <string name="client_state_login">Logging in</string>
    <string name="client_state_connecting">Connecting</string>
    <string name="client_state_unknown">Unknown</string>
    <string name="track_number_filler">of</string>
    <string name="deleted_contact_name">Removed Contact</string>
    <string name="selectattachment_title">Select attachment</string>
    <string name="setname_title">Change your name</string>
    <string name="dialog_delete_contact_title">Delete contact?</string>
    <string name="dialog_delete_contact_message">Are you sure you want to delete this contact? All messages
        from and to it will be deleted.
    </string>
    <string name="depaircontact_title">Depair contact?</string>
    <string name="depaircontact_question">Are you sure you want to depair this contact? You will not
        be able to communicate unless you repair.
    </string>
    <string name="kick_title">Kick from group</string>
    <string name="invite_title">Invite to group</string>
    <string name="dialog_manage_group_title">Manage Members</string>
    <string name="selectlocation_title">Select location</string>
    <string name="dialog_delete_group_title">Delete group</string>
    <string name="dialog_delete_group_message">Are you sure you want to delete this group?</string>
    <string name="dialog_reject_group_invitation_title">Reject invitation</string>
    <string name="dialog_reject_group_invitation_message">Are you sure you want to reject this invitation? You
        will have to be re-invited to participate again.
    </string>
    <string name="dialog_leave_group_title">Leave group</string>
    <string name="dialog_leave_group_message">Are you sure you want to leave this group? You will have to be
        re-invited to participate again.
    </string>
    <string name="common_group">Group</string>
    <string name="common_group_invite">Invited</string>
    <string name="common_friend">Friend</string>
    <string name="menu_licenses">Licenses</string>
    <string name="feature_not_available">feature not available yet</string>
    <string name="file_chooser_string">choose a file to attach</string>
    <string name="open_file">open file</string>
    <string name="error_no_such_app">there is no App installed which could handle this File</string>
    <string name="error_no_videoplayer">can\'t handle video. Please install a proper videoplayer.
    </string>
    <string name="menu_group_delete_profile">Close group</string>
    <string name="menu_group_edit_profile">Edit group</string>
    <string name="menu_group_profile_reject_invitation">Reject invitation</string>
    <string name="menu_group_profile_join">Join group</string>
    <string name="menu_group_profile_leave">Leave group</string>
    <string name="location">Location</string>
    <string name="video">Video</string>
    <string name="show_location_instruction">Use button to show on map</string>
    <string name="play_video_instruction">Use button to play video</string>
    <string name="vcard_description">with all contact details</string>
    <string name="profile_name_text">Name</string>
    <string name="profile_key_text">Key</string>
    <string name="transfer_state_encrypting">Encrypting...</string>
    <string name="transfer_state_decrypting">Decrypting...</string>
    <string name="transfer_state_downloading">Downloading...</string>
    <string name="transfer_state_uploading">Uploading...</string>
    <string name="transfer_state_pause">Pause</string>
    <string name="dialog_attachment_choose_reselect_option">Choose another Attachment</string>
    <string name="dialog_attachment_choose_discard_option">Remove attachment</string>
    <string name="dialog_attachment_title">Edit Attachment</string>
    <string name="dialog_block_user_title">Block Contact</string>
    <string name="dialog_block_user_message">Do you really want to block this contact? You will not
        receive any further messages from this contact.
    </string>
    <string name="media_meta_data_unknown_title">Unknown title</string>
    <string name="media_meta_data_unknown_artist">Unknown artist</string>
    <string name="media_player_playlist_track_divider">of</string>
    <string name="media_player_default_filter_label">All</string>
    <string name="collections">Collections</string>
    <string name="menu_collections">Collections</string>
    <string name="new_media_collection">New collection</string>
    <string name="enter_new_collection_name">Please enter the name for the new collection:</string>
    <string name="preference_keysize_summary">Renew RSA key with selected size</string>
    <string name="preference_keysize_title">RSA Key Size</string>
    <string name="category">Category</string>
    <string name="pref_auto_downloads_mobile">On mobile networks</string>
    <string name="pref_auto_download_wifi">On wireless networks</string>
    <string name="pref_auto_download">Automatic downloads</string>
    <string name="pref_credentials">Credentials</string>
    <string name="pref_export_credentials">Export credentials</string>
    <string name="pref_import_credentials">Import credentials</string>
    <string name="pref_legal_information">Legal Information</string>
    <string name="pref_encryption">Encryption</string>
</resources>