<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_myprofile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_myprofile"/>

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="700"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

    <item
        android:id="@+id/menu_reconnect"
        android:orderInCategory="800"
        android:showAsAction="never"
        android:title="@string/menu_reconnect"/>

    <item
        android:id="@+id/menu_quit"
        android:orderInCategory="900"
        android:showAsAction="never"
        android:title="@string/menu_quit"/>

</menu>
