<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_group_profile_delete"
            android:title="@string/menu_group_delete_profile"
            android:icon="@drawable/ic_delete"
            android:visible="true"
            android:showAsAction="always"
            android:orderInCategory="200"/>

    <item
            android:id="@+id/menu_group_profile_add_person"
            android:title="@string/menu_group_profile_add_person"
            android:icon="@drawable/ic_contact_new"
            android:visible="true"
            android:showAsAction="always"
            android:orderInCategory="210"/>


    <item
            android:id="@+id/menu_group_profile_reject_invitation"
            android:title="@string/menu_group_profile_reject_invitation"
            android:icon="@drawable/ic_light_content_remove"
            android:visible="true"
            android:showAsAction="always"
            android:orderInCategory="220"/>

    <item
            android:id="@+id/menu_group_profile_join"
            android:title="@string/menu_group_profile_join"
            android:icon="@drawable/ic_light_content_merge"
            android:visible="true"
            android:showAsAction="always"
            android:orderInCategory="230"/>

    <item
            android:id="@+id/menu_group_profile_leave"
            android:title="@string/menu_group_profile_leave"
            android:icon="@drawable/ic_leave"
            android:visible="true"
            android:showAsAction="always"
            android:orderInCategory="240"/>

</menu>
