<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/view_player_bg"
                android:padding="@dimen/media_player_layout_margin">

    <RelativeLayout
            android:id="@+id/rl_player_playlist_track_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/media_player_layout_margin"
            android:layout_alignParentLeft="true">

        <TextView
                android:id="@+id/tv_player_current_track_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/media_player_text_medium"
                android:textStyle="bold"
                android:text="28"/>

        <TextView
                android:id="@+id/tv_player_playlist_track_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@id/tv_player_current_track_no"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/media_player_text_medium"
                android:text="@string/media_player_playlist_track_divider"/>

        <TextView
                android:id="@+id/tv_player_playlist_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_player_playlist_track_divider"
                android:textColor="@android:color/white"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/media_player_text_medium"
                android:textStyle="bold"
                android:text="46"/>

    </RelativeLayout>

    <TextView android:id="@+id/tv_conversation_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:gravity="right"
              android:layout_toRightOf="@+id/rl_player_playlist_track_container"
              android:text="@string/media_player_default_filter_label"
              android:textColor="@android:color/white"
              android:layout_marginRight="@dimen/media_player_layout_margin"
              android:layout_marginLeft="16dp"
              android:singleLine="true"
              android:ellipsize="end"
              android:textSize="@dimen/media_player_text_medium"/>


    <ImageView android:id="@+id/iv_player_artwork"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@id/rl_player_playlist_track_container"
               android:src="@drawable/media_cover_art_default"
               android:gravity="center"
               android:layout_marginLeft="@dimen/media_player_layout_margin"
               android:layout_marginRight="@dimen/media_player_layout_margin"
               android:layout_marginTop="@dimen/media_player_layout_margin"/>

    <LinearLayout
            android:id="@+id/ll_player_track_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_player_artwork"
            android:orientation="vertical"
            android:layout_margin="@dimen/media_player_layout_margin">

        <TextView
                android:id="@+id/tv_player_track_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/media_player_text_large"
                android:text="@string/media_meta_data_unknown_title"
                android:singleLine="true"
                android:ellipsize="end"
                android:fadingEdge="horizontal"
                android:gravity="center_horizontal"/>
        <TextView
                android:id="@+id/tv_player_track_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/xo_media_player_secondary_text"
                android:textSize="@dimen/media_player_text_small"
                android:text="@string/media_meta_data_unknown_artist"
                android:lines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:fadingEdge="horizontal"
                android:gravity="center_horizontal"/>"

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/rl_player_seekbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_player_track_description"
            android:orientation="horizontal"
            android:layout_margin="@dimen/media_player_layout_margin"
            android:gravity="center">


        <TextView
                android:id="@+id/tv_player_current_time"
                android:src="@drawable/ic_player_prev_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/xo_media_player_secondary_text"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/media_player_text_medium"
                android:text="0:00"
                android:background="@null"/>

        <SeekBar
                android:id="@+id/pb_player_seek_bar"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_height="22dp"
                android:layout_marginLeft="@dimen/media_player_layout_margin"
                android:layout_marginRight="@dimen/media_player_layout_margin"
                android:layout_toRightOf="@+id/tv_player_current_time"
                android:layout_toLeftOf="@+id/tv_player_total_duration"
                android:paddingLeft="@dimen/media_player_layout_margin"
                android:paddingRight="@dimen/media_player_layout_margin"
                android:thumb="@drawable/seekbar_player_control"
                android:thumbOffset="@dimen/media_player_layout_margin"
                android:progressDrawable="@drawable/progress_horizontal_appbasetheme"/>

        <TextView
                android:id="@+id/tv_player_total_duration"
                android:src="@drawable/ic_player_next_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/xo_media_player_secondary_text"
                android:textSize="@dimen/media_player_text_medium"
                android:text="0:00"
                android:layout_alignParentRight="true"
                android:background="@null"/>


    </RelativeLayout>

    <!-- Player Footer -->
    <RelativeLayout
            android:id="@+id/rl_player_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_player_seekbar_container"
            android:padding="@dimen/media_player_layout_margin"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center">

        <ToggleButton
                android:id="@+id/bt_player_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/btn_player_shuffle"/>

        <!-- Previous Button -->
        <ImageButton
                android:id="@+id/bt_player_skip_back"
                android:src="@drawable/ic_player_prev_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/bt_player_play"
                android:background="@null"/>

        <!-- Play Button -->
        <ToggleButton
                android:id="@+id/bt_player_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_player_play"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:layout_centerInParent="true"/>
        <!-- Next Button -->
        <ImageButton
                android:id="@+id/bt_player_skip_forward"
                android:src="@drawable/ic_player_next_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/bt_player_play"
                android:layout_centerVertical="true"
                android:background="@null"/>
        <ImageButton
                android:id="@+id/bt_player_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_player_repeat"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>


</RelativeLayout>